test/typecheck/pass/cast_lexp1.sail

val unit -> int effect pure test

function int test () = {
  (int) y := 10;
  y
}
